ribbit/tests/ui/mismatch_size.stderr
error[E0271]: type mismatch resolving `<A as Pack>::Loose == u8`
 --> tests/ui/mismatch_size.rs:5:1
  |
5 | #[ribbit::pack(size = 16)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u16`, found `u8`
  |
  = help: see issue #48214
  = note: this error originates in the attribute macro `ribbit::pack` (in Nightly builds, run with -Z macro-backtrace for more info)
